# mnemofy

./: .gitignore  ARTIFACTS_IMPLEMENTATION.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  INSTALL_LINUX.md  MANIFEST.in  PHASE6_SUMMARY.md  PHASE7_SUMMARY.md  README.md  Taskfile.yml  pyproject.toml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
docs/: 001-adaptive-asr-model-selection.md  002-enhanced-output-formats.md  MODEL_AWARE_ARTIFACTS.md  PHASE_8_SUMMARY.md  QUICKSTART_LINUX.md  RERUN_HANDLING.md  SECURITY_REVIEW.md  feature_meeting_type_and_llm_engines.md
examples/: README.md  README_EXAMPLES.md  analyze_metadata.py  compare_model_runs.py  design-meeting-example.txt  planning-meeting-example.txt  sample.notes.md  sample.transcript.json  sample.transcript.srt  sample.transcript.txt  status-meeting-example.txt
scripts/: benchmark.py  install.sh
specs/001-adaptive-asr-model-selection/: README.md  data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-enhanced-output-formats/: CLARIFICATIONS.md  IMPL_PLAN.md  README.md  research.md  tasks.md
specs/003-meeting-type-llm/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/mnemofy/: __init__.py  analysis.py  artifacts.py  audio.py  classifier.py  cli.py  formatters.py  model_selector.py  notes.py  pipeline.py  (+3 more)
tests/: __init__.py  test_artifacts.py  test_audio.py  test_classifier.py  test_cli_integration.py  test_formatters.py  test_high_signal.py  test_integration_pipeline.py  test_llm_config.py  test_llm_engines.py  test_meeting_type_menu.py  test_model_selector.py  test_notes.py  test_notes_enhanced.py  test_output_manager.py  test_output_manager_enhancements.py  test_resources.py  test_transcriber.py  test_transcript_normalization.py  test_tui_model_menu.py
(+36 files in other folders)
