[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemofy"
version = "0.9.3"
description = "Extract audio from media files, transcribe speech, and produce documented meeting notes"
readme = "README.md"
requires-python = ">=3.9,<3.15"
license = {text = "MIT"}
authors = [
    {name = "mnemofy contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "faster-whisper>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "readchar>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
mnemofy = "mnemofy.cli:main"

[project.urls]
Homepage = "https://github.com/tiroq/mnemofy"
Repository = "https://github.com/tiroq/mnemofy"

[tool.setuptools]
packages = ["mnemofy", "mnemofy.tui"]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=mnemofy --cov-report=term-missing"
